FIX: Add display flex to whotimestable and get rid of align-self and justify self on timestable for @media min 1440.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,11 +496,11 @@ footer {
         height: 50%;
         width: auto;
         flex-basis: 70%;
-        align-self: flex-end;
-        justify-self: center;
+        
     }
 
     #who-timestable {
+        display: flex;
         flex-direction: column;
         height: 100vh;
         width: 50%;
